# twisp

./: LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  publish.yml
test/: test_twisp.py
twisp/: __init__.py  __main__.py  tsib.py  utils.py
