[tool.poetry]
name = "twisp"
version = "0.1.0"
description = ""
authors = ["Tzeng Yuxio <tzengyuxio@gmail.com>"]
maintainers = ["Tzeng Yuxio <tzengyuxio@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
tika = "^1.24"
rich = "^10.4.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
twisp = 'twisp:main'